--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
   </script>
 </head>
-<body>
+<body style="background-image: url(/assets/background.jpg); background-size: cover;">
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-sm-12">
       <%= yield %>
     </div>
   </div>
