--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -32,10 +32,22 @@
         <div class="form-group">
           <label for="bitcoinAddress" class="col-sm-2 control-label">Bitcoin</label>
           <div class="col-sm-10">
-            <input type="text" id="bitcoinAddress" class="form-control" readonly value="<%= user.bitcoin_address -%>"/>
+            <input type="text" id="bitcoinAddress" class="form-control"
+                   readonly value="<%= user.bitcoin_address -%>"/>
           </div>
         </div>
 
+        <!-- Patreon -->
+        <div class="form-group">
+          <label for="patreon" class="col-sm-2 control-label">Patreon</label>
+          <div class="col-sm-10">          
+            
+            <div class="alignment">
+              <%= link_to user.patreon %>
+            
+              <div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
