--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
   </script>
 </head>
-<body style="background-image: url(/assets/background.jpg); background-size: cover;">
+<body>
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
