Add clipboard icon

--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -40,7 +40,7 @@
                    readonly value="<%= user.bitcoin_address -%>"/>
                      <span class="input-group-btn">
                        <button class="btn btn-default" data-clipboard-target="#bitcoin<%= user.id %>">
-                       copy
+                       <img class="clippy" src="/assets/clippy.svg" width="13" alt="Copy to Clipboard" />
                      </button>
                    </span>
             </div>
