--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
   /* ]]> */
 </script>
 
-<h1 class="main-head">UPDIP - User Powered Developer Incentive Program</h1>
+<h1 class="main-head">UPDIP - User Powered Developer Incentive Program for App.Net</h1>
 
     <div class="col-sm-7">
     
