Change style and pushed for Kais sake

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ body {
   margin-bottom: 2em;
 }
 .card {
-  background: #8F8F8F;
+  background: #556867;
   margin-bottom: 3em;
   padding: 2em;
   border-radius: 10px;
