--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,7 @@ body {
   padding: 2em;
   border-radius: 10px;
   -webkit-backdrop-filter: blur(80px);
+  box-shadow: 2px 2px rgba(255, 255, 255, 0.1);
 }
 .sidebar {
   font-size: 2em;
