--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -9,7 +9,7 @@
           <%= image_tag(user.avatar.url, style: 'width: 80px; margin-bottom: 2em', class: 'img-rounded') -%>
         </div>
         <div class="col-sm-10">
-          <span class="username"> <%= user.username -%> </span>
+          <span class="username"> @<%= user.username -%> </span>
         </div>
       </div>
 
@@ -55,7 +55,7 @@
           <div class="col-sm-10">          
             
             <div class="alignment">
-              <%= link_to user.patreon %>
+              <%= link_to user.patreon, user.patreon %>
             </div>
              
           </div>
