--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,8 +30,39 @@ body {
   padding: 2em;
   border-radius: 10px;
   -webkit-backdrop-filter: blur(80px);
-  box-shadow: 2px 2px rgba(255, 255, 255, 0.1);
+
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px #d1d1d1;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
+.card:hover {
+  -webkit-transform: scale(1.05, 1.05);
+  transform: scale(1.05, 1.05)
+}
+
+.card:after {
+  content: "";
+  border-radius: 5px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
+}
+
+.card:hover:after {
+  opacity: 1;
+}
+
+
 .sidebar {
   font-size: 2em;
 }
