--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,18 +25,14 @@ body {
   color: #FFF8DA;
   margin-bottom: 2em;
 }
+
 .card {
   margin-bottom: 3em;
   padding: 2em;
-  border-radius: 10px;
-  -webkit-backdrop-filter: blur(80px);
+  background: rgba(34,34,34,0.2);
+  border-radius: 20px;
 
-  border-radius: 10px;
-  box-shadow: 1px 1px 6px #d1d1d1;
-  border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: inset 0 0 8px rgba(47, 47, 47, 0.2);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -47,12 +43,12 @@ body {
 
 .card:after {
   content: "";
-  border-radius: 5px;
+  border-radius: 20px;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
   opacity: 0;
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1)
@@ -61,7 +57,6 @@ body {
 .card:hover:after {
   opacity: 1;
 }
-
 
 .sidebar {
   font-size: 2em;
