--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,7 +2,7 @@ body {
   font-family: 'HKGroteskRegular';
   font-weight: normal;
   font-style: normal;
-  background-image: asset_url('background.jpg');
+  background-image: image-url('background.jpg');
   background-size: cover;
   color: #FFF8DA !important;
 }
