--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,15 +16,15 @@
 <h1 class="main-head">UPDIP - User Powered Developer Incentive Program for App.Net</h1>
 
     <div class="col-sm-7">
-    
-<%= @users.each do |user| -%>
+
+<% @users.each do |user| -%>
     <%= render 'card', user: user %>
 <% end %>
-  
+
   </div>
-  
+
     <div class="sidebar col-sm-5">
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </p>    
-  
+     </p>
+
 </div>
