--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -13,7 +13,7 @@
             @<%= user.username -%>
           </div>
           <p>
-            <%= raw user.description -%>
+            <%= markdown(user.description.to_s) -%>
           </p>
 
         </div>
