--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -72,7 +72,7 @@
               <div class="col-sm-10">
 
                 <div class="alignment">
-                  <%= link_to user.patreon, user.patreon %>
+                  <%= link_to 'Become a patreon', user.patreon, class: 'btn btn-success', target: '_blank' %>
                 </div>
 
               </div>
