--- a/app/views/users/_card.html.erb
+++ b/app/views/users/_card.html.erb
@@ -8,7 +8,7 @@
         <div class="col-sm-2 text-right">
           <%= image_tag(user.avatar.url, style: 'width: 80px; margin-bottom: 2em', class: 'img-rounded') -%>
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-10 user-description">
           <div class="username">
             @<%= user.username -%>
           </div>
