Colors. Beautiful colors.

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,3 +10,9 @@
 .user-description {
   margin-bottom: 1.5em;
 }
+
+input.form-control {
+  color: #FFF8AA;
+  background: #525250 !important;
+  border-color: #525250;
+}
