--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,6 +7,11 @@ body {
   color: #FFF8DA !important;
 }
 
+.logo {
+  float: left;
+  margin-right: 15px;
+}
+
 a, a:visited, a:hover {
   color: #FFF8AA;
   text-decoration: underline;
@@ -19,6 +24,7 @@ a:hover {
 .alignment {
   padding-top: 0.6em;
 }
+
 .main-head {
   color: #FFF8DA;
   margin-bottom: 2em;
@@ -29,7 +35,7 @@ a:hover {
 .card {
   margin-bottom: 3em;
   padding: 2em;
-  background: rgba(34,34,34,0.2);
+  background: rgba(34, 34, 34, 0.2);
   border-radius: 20px;
 
   box-shadow: inset 0 0 8px rgba(47, 47, 47, 0.2);
@@ -63,6 +69,7 @@ a:hover {
   font-weight: normal;
   font-style: normal;
 }
+
 .username {
   font-size: 2em;
 }
