--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
 
 <div class="sidebar col-sm-5">
   <p>
-    <%= image_tag 'logo.png', height: '120em', class: 'logo' %>
+    <%= image_tag 'logo.png', height: '120em', class: 'logo animated', id: 'logo' %>
 
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
