--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
+      <%= render 'shared/nav' %>
       <%= yield %>
     </div>
   </div>
