Exhausting basic search field hackday!

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,6 +7,14 @@ body {
   color: #FFF8DA !important;
 }
 
+.search-field {
+  margin-bottom: 1.5em;
+}
+
+.search-field input {
+  font-family: 'HKGroteskRegular';
+}
+
 .logo {
   float: left;
   margin-right: 15px;
