--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,1 +1,1 @@
-<h1 class="main-head">UPDIP - User Powered Developer Incentive Program for App.Net</h1>
+<h1 class="main-head text-center">UPDIP - User Powered Developer Incentive Program for App.Net</h1>
