--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,14 @@
 </div>
 
 <div class="sidebar col-sm-5">
+<form action="/">
+  <div class="input-group search-field">
+    <input type="text" name="search" class="form-control" placeholder="Search for developer or app">
+    <span class="input-group-btn">
+      <button class="btn btn-default" type="submit">Go!</button>
+    </span>
+  </div>
+</form>
   <p>
     <%= image_tag 'logo.png', height: '120em', class: 'logo animated', id: 'logo' %>
 
