--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,24 +13,23 @@
   /* ]]> */
 </script>
 
-
 <div class="col-sm-7">
-
-  <% @users.each do |user| -%>
-      <%= render 'card', user: user %>
-  <% end %>
-
+  <div class="animated-search-filter">
+    <% @users.each do |user| -%>
+        <%= render 'card', user: user %>
+    <% end %>
+  </div>
 </div>
 
 <div class="sidebar col-sm-5">
-<form action="/">
-  <div class="input-group search-field">
-    <input type="text" name="search" class="form-control" placeholder="Search for developer or app">
+  <form action="/">
+    <div class="input-group search-field">
+      <input type="text" name="search" class="form-control animated-search-filter" placeholder="Search for developer or app">
     <span class="input-group-btn">
       <button class="btn btn-default" type="submit">Go!</button>
     </span>
-  </div>
-</form>
+    </div>
+  </form>
   <p>
     <%= image_tag 'logo.png', height: '120em', class: 'logo animated', id: 'logo' %>
 
@@ -39,5 +38,6 @@
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
-
 </div>
+
+<script src="/assets/animated-search-filter.js"></script>
