Asset pipeline. 'nuf said.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,4 +40,4 @@
   </p>
 </div>
 
-<script src="/assets/animated-search-filter.js"></script>
+<script src="<%= asset_path 'animated-search-filter' %>"></script>
