Add a basic footer

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -82,3 +82,10 @@ a:hover {
 .username {
   font-size: 2em;
 }
+
+footer {
+  background: #525250;
+  height: 10em;
+  opacity: 0.8;
+  padding-top: 2em;
+}
