--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,5 +18,14 @@
   </div>
 </div>
 
+
+<footer>
+  <div class="container">
+    <div class="col-sx-12">
+      <p>Footer scooter</p>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
